@@ -30,6 +30,77 @@ Rails.application.config.generators do |g|
 end
 RUBY
 
+module Gemfile
+  class GemInfo
+    def initialize(name) @name=name; @group=[]; @opts={}; end
+    attr_accessor :name, :version
+    attr_reader :group, :opts
+
+    def opts=(new_opts={})
+      new_group = new_opts.delete(:group)
+      if (new_group && self.group != new_group)
+        @group = ([self.group].flatten + [new_group].flatten).compact.uniq.sort
+      end
+      @opts = (self.opts || {}).merge(new_opts)
+    end
+
+    def group_key() @group end
+
+    def gem_args_string
+      args = ["'#{@name}'"]
+      args << "'#{@version}'" if @version
+      @opts.each do |name,value|
+        args << ":#{name}=>#{value.inspect}"
+      end
+      args.join(', ')
+    end
+  end
+
+  @geminfo = {}
+
+  class << self
+    # add(name, version, opts={})
+    def add(name, *args)
+      name = name.to_s
+      version = args.first && !args.first.is_a?(Hash) ? args.shift : nil
+      opts = args.first && args.first.is_a?(Hash) ? args.shift : {}
+      @geminfo[name] = (@geminfo[name] || GemInfo.new(name)).tap do |info|
+        info.version = version if version
+        info.opts = opts
+      end
+    end
+
+    def write
+      File.open('Gemfile', 'a') do |file|
+        file.puts
+        grouped_gem_names.sort.each do |group, gem_names|
+          indent = ""
+          unless group.empty?
+            file.puts "group :#{group.join(', :')} do" unless group.empty?
+            indent="  "
+          end
+          gem_names.sort.each do |gem_name|
+            file.puts "#{indent}gem #{@geminfo[gem_name].gem_args_string}"
+          end
+          file.puts "end" unless group.empty?
+          file.puts
+        end
+      end
+    end
+
+    private
+    #returns {group=>[...gem names...]}, ie {[:development, :test]=>['rspec-rails', 'mocha'], :assets=>[], ...}
+    def grouped_gem_names
+      {}.tap do |_groups|
+        @geminfo.each do |gem_name, geminfo|
+          (_groups[geminfo.group_key] ||= []).push(gem_name)
+        end
+      end
+    end
+  end
+end
+def add_gem(*all) Gemfile.add(*all); end
+
 @recipes = <%= resolve_recipes.map(&:key).inspect %>
 @prefs = <%= resolve_preferences %>
 @gems = <%= resolve_gems %>
@@ -81,6 +152,10 @@ end
 <%= render('recipe', recipe.get_binding).chomp %>
 <% end
 %>
+
+# >-----------------------------[ Final Gemfile Write ]------------------------------<
+Gemfile.write
+
 # >---------------------------------[ Diagnostics ]----------------------------------<
 
 # remove prefs which are diagnostically irrelevant
